--- a/app/views/deals/_body_hotdeals.html.erb
+++ b/app/views/deals/_body_hotdeals.html.erb
@@ -42,7 +42,7 @@
      <div class="info_wrap clearfix">
       <div class="block clearfix">
         <div class="box">
-          <p>Savings</p>
+          <p>You saved</p>
           <em>
             <% if hotdeal.h_spare_41.present? %>
             <% running_total = 0 %>
