--- a/app/views/deals/_body_promocodes.html.erb
+++ b/app/views/deals/_body_promocodes.html.erb
@@ -30,7 +30,7 @@
        <div class="info_wrap clearfix">
         <div class="block clearfix">
           <div class="box">
-            <p>Savings</p>
+            <p>You saved</p>
             <em>
               <% saving_total = 0 %>
               <% saving_total =  promocode.p_spare_26 - (promocode.p_spare_26 - (promocode.p_spare_27 / 100) * promocode.p_spare_26) %>
