--- a/app/views/deals/_notes_promo_test.html.erb
+++ b/app/views/deals/_notes_promo_test.html.erb
@@ -15,18 +15,17 @@
     <li>
       <a href="#n">How to use</a>
       <ul>
-        <li>Copy "Promotional Code"</li>
+        <li>Copy "Promo Code"</li>
         <li>Click "Use Code"</li>
         <li>Click "Buy Now or Add to Cart"</li>
         <li>Enter your promotional code into the box of "Gift cards & promotional codes"</li>
         <!-- <li>Proceed with payment then the code is automatically applied.</li> -->
-        <li class="about_db_dis">
-          <!-- <p>What the "Extra Discount" is?</p> -->
+        <!-- <li class="about_db_dis">
           <span class="double red">Extra Discount</span>
           <em>You can get extra discount by applying promotional code to the product that is being discounting.</em>
           <span class="double green">Coupon Deals</span>
           <em>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</em>
-        </li>
+        </li> -->
       </ul>
     </li>
     <li>
