--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -38,7 +38,7 @@
   .codes .lt_cnt .most_hotdeal .image img{width:100%;height:100px;object-fit:contain;}
   .codes .lt_cnt .most_hotdeal .inner{float:left;width:59%;margin-left:1%;padding:0 7px 5px 0;}
   .codes .lt_cnt .most_hotdeal .inner p{font-size:12px;line-height:1.4;height:4.2em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;word-break:break-all;-webkit-box-orient:vertical;-webkit-line-clamp:3}
-  .codes .lt_cnt .most_hotdeal .inner p a{text-decoration:none;color:#000;}
+  .codes .lt_cnt .most_hotdeal .inner p a{text-decoration:none;color:#000;word-break:break-word;}
   .codes .lt_cnt .most_hotdeal .inner p.expired{font-size:11px;color:#ff0000;}
   .codes .lt_cnt .most_hotdeal .inner p.endtoday{font-size:11px;color:#ffa500;}
   .codes .lt_cnt .most_hotdeal .inner em{font-size:20px;}
@@ -124,18 +124,18 @@
   .codes .card_wrap .card .inner>.code_high>.admin>ul{}
   .codes .card_wrap .card .inner>.code_high>.admin>ul>li{float:left;margin-right:15px;}
 
-  .codes .card_wrap .card .inner>.code_high .m_tooltip_common{display:none;}
-  .codes .card_wrap .card .inner>.code_high .tooltip_common{position:relative;display:inline;color:#616161;}
-  .codes .card_wrap .card .inner>.code_high .tooltip_common:hover .tooltip-content{visibility: visible;}
+  .codes .card_wrap .card .inner>.code_high .m_toolticommon{display:none;}
+  .codes .card_wrap .card .inner>.code_high .toolticommon{position:relative;display:inline;color:#616161;}
+  .codes .card_wrap .card .inner>.code_high .toolticommon:hover .tooltip-content{visibility: visible;}
   .codes .card_wrap .card .inner>.code_high .content_common{visibility:hidden;width:400px;padding:7px 7px;color:white;text-align:center;position:absolute;z-index:5;line-height:1.2;}
-  /*.codes .card_wrap .card .inner>.code_high .tooltip_red{background:#ff4d4d;}*/
-  .codes .card_wrap .card .inner>.code_high .tooltip_red .tooltip-content{background:#ff4d4d;}
-  /*.codes .card_wrap .card .inner>.code_high .tooltip_green{background:#87c442;}*/
-  .codes .card_wrap .card .inner>.code_high .tooltip_green .tooltip-content{background:#87c442;}
-  /*.codes .card_wrap .card .inner>.code_high .tooltip_orange{background:#e47911;}*/
-  .codes .card_wrap .card .inner>.code_high .tooltip_orange .tooltip-content{background:#e47911;}
-  /*.codes .card_wrap .card .inner>.code_high .tooltip_purple{background:#b400b4;}*/
-  .codes .card_wrap .card .inner>.code_high .tooltip_purple .tooltip-content{background:#b400b4;}
+  /*.codes .card_wrap .card .inner>.code_high .tooltired{background:#ff4d4d;}*/
+  .codes .card_wrap .card .inner>.code_high .tooltired .tooltip-content{background:#ff4d4d;}
+  /*.codes .card_wrap .card .inner>.code_high .tooltigreen{background:#87c442;}*/
+  .codes .card_wrap .card .inner>.code_high .tooltigreen .tooltip-content{background:#87c442;}
+  /*.codes .card_wrap .card .inner>.code_high .tooltiorange{background:#e47911;}*/
+  .codes .card_wrap .card .inner>.code_high .tooltiorange .tooltip-content{background:#e47911;}
+  /*.codes .card_wrap .card .inner>.code_high .tooltipurple{background:#b400b4;}*/
+  .codes .card_wrap .card .inner>.code_high .tooltipurple .tooltip-content{background:#b400b4;}
 
   .codes .card_wrap .card .inner>.code_high>em{font-size:12px;color:#616161;display:block;}
   .codes .card_wrap .card .inner>.code_high>em.expired{background:red;color:#fff;display:inline-block;padding:5px 10px;border-radius:15px;float:right;}
@@ -216,7 +216,7 @@
   .codes .lt_cnt .most_hotdeal .image img{width:100%;}
   .codes .lt_cnt .most_hotdeal .inner{float:left;width:59%;margin-left:1%;padding:20px 7px 5px 0;}
   .codes .lt_cnt .most_hotdeal .inner p{font-size:12px;line-height:1.4;height:4.2em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;word-break:break-all;-webkit-box-orient:vertical;-webkit-line-clamp:3}
-  .codes .lt_cnt .most_hotdeal .inner p a{text-decoration:none;color:#000;}
+  .codes .lt_cnt .most_hotdeal .inner p a{text-decoration:none;color:#000;word-break:break-word;}
   .codes .lt_cnt .most_hotdeal .inner em{font-size:20px;}
   .codes .lt_cnt .most_hotdeal .inner em span{font-size:15px;text-decoration:line-through;color:#616161;font-size:15px;margin-right:7px;}
  
@@ -261,14 +261,14 @@
   .codes .card_wrap .card .inner>.code_high .info_wrap .box p{font-size:12px;margin:5px;color:#6d6e71;}
   .codes .card_wrap .card .inner>.code_high .info_wrap .box em{font-size:15px;}
 
-  /*.codes .card_wrap .card .inner>.code_high .tooltip_common{display:none;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltip_common{display:block;position:relative;display:inline;color:#616161;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltip_common:hover .m_tooltip-content{visibility: visible;}
+  /*.codes .card_wrap .card .inner>.code_high .toolticommon{display:none;}
+  .codes .card_wrap .card .inner>.code_high .m_toolticommon{display:block;position:relative;display:inline;color:#616161;}
+  .codes .card_wrap .card .inner>.code_high .m_toolticommon:hover .m_tooltip-content{visibility: visible;}
   .codes .card_wrap .card .inner>.code_high .m_content_common{visibility:hidden;width:355px;padding:7px 7px;color:white;position:absolute;z-index:1;line-height:1.2;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltip_red .m_tooltip-content{background:#ff4d4d;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltip_green .m_tooltip-content{background:#87c442;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltip_orange .m_tooltip-content{background:#e47911;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltip_purple .m_tooltip-content{background:#b400b4;}*/
+  .codes .card_wrap .card .inner>.code_high .m_tooltired .m_tooltip-content{background:#ff4d4d;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltigreen .m_tooltip-content{background:#87c442;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltiorange .m_tooltip-content{background:#e47911;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltipurple .m_tooltip-content{background:#b400b4;}*/
 
   .codes .card_wrap .card .inner>.code_high>ul.exp{}
   .codes .card_wrap .card .inner>.code_high>ul.exp>li{list-style:disc;font-size:11px;color:#616161;display:block;margin-top:3px;}
@@ -333,14 +333,14 @@
   .codes .card_wrap .card .inner>.code_high>p>span>.m_codes{background:#000;color:#fff;padding:5px 10px;border-radius:10px;line-height:38px;}
   .codes .card_wrap .card .deal_btn em{display:block;font-size:9px;padding:5px 14.5px;}
   
-  /*.codes .card_wrap .card .inner>.code_high .tooltip_common{display:none;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltip_common{display:block;position:relative;display:inline;color:#616161;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltip_common:hover .m_tooltip-content{visibility: visible;}
+  /*.codes .card_wrap .card .inner>.code_high .toolticommon{display:none;}
+  .codes .card_wrap .card .inner>.code_high .m_toolticommon{display:block;position:relative;display:inline;color:#616161;}
+  .codes .card_wrap .card .inner>.code_high .m_toolticommon:hover .m_tooltip-content{visibility: visible;}
   .codes .card_wrap .card .inner>.code_high .m_content_common{visibility:hidden;width:370px;padding:7px 7px;color:white;text-align:center;position:absolute;z-index:1;line-height:1.2;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltip_red .m_tooltip-content{background:#ff4d4d;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltip_green .m_tooltip-content{background:#87c442;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltip_orange .m_tooltip-content{background:#e47911;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltip_purple .m_tooltip-content{background:#b400b4;}*/
+  .codes .card_wrap .card .inner>.code_high .m_tooltired .m_tooltip-content{background:#ff4d4d;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltigreen .m_tooltip-content{background:#87c442;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltiorange .m_tooltip-content{background:#e47911;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltipurple .m_tooltip-content{background:#b400b4;}*/
 
   .codes .lt_cnt .most_h_wrap .bottom_line{display:none;}
   .codes .lt_cnt .most_hotdeal .image img{height:150px;object-fit:contain;}
@@ -605,11 +605,11 @@
 
 /* PopUp Menu on most_reviewd_m Page */
 .nav_most_m{display:none;}
-.m_popup_wrap, label.most_m_label, nav.most_m_popup{position:absolute;}
+.m_popuwrap, label.most_m_label, nav.most_m_popup{position:absolute;}
 nav.most_m_popup{opacity:0;visibility:hidden;/*background:#505050;*/border-radius:4px;transition:.2s ease-out;box-shadow:0 16px 32px rgba(0, 0, 0, 0.25);-webkit-transform:translateY(-50px) scale(0.5);transform:translateY(-50px) scale(0.5);transition:.2s;position:fixed;bottom:70px;right:14.6px;z-index:99;border:3px solid #000;}
 nav.most_m_popup a{text-decoration:none;color:#fff;display:block;padding:15px 0;text-align:center;}
 nav.most_m_popup a:hover{background:#414141;transition:0.2s ease;}
-.m_popup_wrap{height:100vh;display:flex;justify-content:center;align-items:center;bottom:0;right:50px;}
+.m_popuwrap{height:100vh;display:flex;justify-content:center;align-items:center;bottom:0;right:50px;}
 #check{display:none;}
 #check:checked ~ nav{opacity:1;visibility:visible;-webkit-transform:translateX(0);transform:translateX(0);-webkit-transform:translateX(0) scale(1);transform:translateX(0) scale(1);transition:.2s;}
 #check:checked ~ label{-webkit-transform:scale(1.1);transform:scale(1.1);}
@@ -763,3 +763,73 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
   #google_translate_element .skiptranslate{width:100% !important;}
   #google_translate_element .goog-te-gadget-simple{width:calc(100% - 32px) !important;text-align:center;}
 }
+
+
+
+
+
+
+
+
+
+
+
+
+.slider {
+  width: 100%;
+  height: 250px;
+  position: relative;
+  margin: 20px auto;
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
+
+.slider::-webkit-scrollbar {
+  display: none;
+}
+
+.slider .img_box{display:block;margin-right:10px;}
+.slider .slide {
+  display: flex;
+  position: absolute;
+  left: 0;
+  transition: 0.3s left ease-in-out;
+}
+
+.slider .item {
+ 
+}
+
+.slider .item:last-child {
+  margin-right: 0;
+}
+
+.ctrl {
+  text-align: center;
+  margin-top: 5px;
+}
+
+.ctrl-btn {
+  padding: 20px 20px;
+  min-width: 50px;
+  background: rgba(204,204,204,0.5);
+  border: none;
+  font-weight: 600;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+
+  position: absolute;
+  top: 50%;
+  margin-top: -27.5px;
+}
+
+.ctrl-btn.pro-prev {
+  left: 0;
+}
+
+.ctrl-btn.pro-next {
+  right: 0;
+}
+
+
