--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -49,16 +49,16 @@
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em{font-size:17px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em a{color:#000;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em i:before{content: "\f08e";font-family: FontAwesome;font-style: normal;margin-left:3px;}
-.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .info_box span i:before{content: "\f08e";font-family: FontAwesome;font-style: normal;margin-left:3px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em .n_expired{color:#ff4d4d;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em .n_endtoday{color:#ffa500;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em .end_date{font-size:13px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em .end_soon{font-size:17px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em a.keyword{text-overflow:ellipsis;white-space:nowrap;word-wrap:normal;width:200px;overflow:hidden;word-break:break-word;font-size:13px;display:inline-block;line-height:1;}
-.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .info_box{margin-bottom:10px;}
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .info_box{margin-bottom:10px;border:1px dashed #ccc;border-left:0;border-right:0;padding:3px 0;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .info_box span{display:block;font-size:12px;color:#a6a6a6;margin-left:15px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .info_box span ul{margin-left:10px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .info_box span ul li{list-style:disc;}
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .info_box span i:before{content: "\f08e";font-family: FontAwesome;font-style: normal;margin-left:3px;}
 /*.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .info_box span a{color:#08f;}*/
 
 @media screen and (max-width:640px){
@@ -82,7 +82,7 @@
 .show_wrap .show_box .show_inner .hotdeal_inner .description{font-size:15px;margin:15px 0;line-height:1.4;height:5.6em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:4}
 .show_wrap .show_box .show_inner .hotdeal_inner .trix{font-weight:100;border-top:1px solid #ccc;border-bottom:1px solid #ccc;margin-bottom:20px;padding:10px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .trix ul{margin-left:25px;}
-.show_wrap .show_box .show_inner .hotdeal_inner .trix ul li{list-style:disc;font-size:14px;}
+.show_wrap .show_box .show_inner .hotdeal_inner .trix ul li{list-style:disc;font-size:12px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .trix span{font-size:20px;}
 .show_wrap .show_box .show_inner .hotdeal_inner p.code_line{margin:0 0 7px 0;font-size:11.5px;color:#616161;}
 .show_wrap .show_box .show_inner .hotdeal_inner .btn{}
