--- a/app/views/hotdeals/_usa_ver2.html.erb
+++ b/app/views/hotdeals/_usa_ver2.html.erb
@@ -55,7 +55,7 @@
   <% if @hotdeal.h_spare_45.present? %>
     <div class="second_block clearfix">
       <div class="box line_three">
-        <p>Savings</p>
+        <p>You saved</p>
         <em>
          <% if @hotdeal.h_spare_41.present? %>
           <% running_total = 0 %>
@@ -94,7 +94,7 @@
   <% else %>
     <div class="second_block clearfix">
       <div class="box">
-        <p>Savings</p>
+        <p>You saved</p>
         <em>
          <% if @hotdeal.h_spare_41.present? %>
           <% running_total = 0 %>
@@ -117,18 +117,20 @@
       </div>
     </div>
   <% end %>
-  <div class="info_box">
-    <span>
-      <ul>
-        <% if @hotdeal.h_spare_02.present? %>
-          <li>Check coupon on detail page to receive your extra savings.</li>
-        <% end %>
-        <% if @hotdeal.h_spare_45.present? %>
-          <li>Price dropped compare to last posted.</li>
-        <% end %>
-      </ul>
-    </span>
-  </div>
+  <% if @hotdeal.h_spare_02.present? || @hotdeal.h_spare_45.present? %>
+    <div class="info_box">
+      <span>
+        <ul>
+          <% if @hotdeal.h_spare_02.present? %>
+            <li>Check coupon on detail page to receive your extra savings.</li>
+          <% end %>
+          <% if @hotdeal.h_spare_45.present? %>
+            <li>Price dropped compare to last posted.</li>
+          <% end %>
+        </ul>
+      </span>
+    </div>
+  <% end %>
 
   <% if @hotdeal.h_spare_14.present? %>
     <div class="third_block clearfix">
@@ -151,7 +153,7 @@
   </div>
 
   <%if @hotdeal.h_spare_21.present? %>
-    <div class="trix trix-container gradient"><span>Features</span><p><%= @hotdeal.h_spare_21.html_safe %></p><button class="show-btn fa fa-chevron-down"></button></div>
+    <div class="trix trix-container gradient"><span>About the product</span><p><%= @hotdeal.h_spare_21.html_safe %></p><button class="show-btn fa fa-chevron-down"></button></div>
   <% else %>
     <% if @hotdeal.h_description.present? %>
       <div class="show_des"><p class="description"><%= @hotdeal.h_description %></p></div>
