--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -94,8 +94,10 @@
 .sp_wrap .sp_right .sp_card .admin{font-size:12px;position:absolute;bottom:0;right:0;}
 .sp_wrap .sp_right .sp_image{float:left;width:15%;height:100px;position:relative;}
 .sp_wrap .sp_right .sp_image img{width:100%;height:70px;object-fit:contain;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);}
+.sp_wrap .sp_right .sp_image em.expired{background:#ff4d4d;color:#fff;padding:4px 5px;font-size:11px;}
+.sp_wrap .sp_right .sp_image em.endtoday{background:#ffa500;color:#fff;padding:4px 5px;font-size:10px;}
 .sp_wrap .sp_right .inner{float:left;width:80%;margin-left:5%;}
-.sp_wrap .sp_right .inner span.index_title{background:#ffff00;font-weight:500;}
+.sp_wrap .sp_right .inner span.index_title{font-weight:500;border:1px solid #ccc;padding:0 5px;}
 /*.sp_wrap .sp_right .inner .expire_date em{display:inline-block;}*/
 .sp_wrap .sp_right .inner .sp_title{margin:2px 0;font-weight:500;line-height:1.2;font-size:15px;line-height:1.4;height:2.8em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:2;}
 .sp_wrap .sp_right .inner .sp_title a{color:#616161;display:block;font-weight:100;}
@@ -104,8 +106,8 @@
 .sp_wrap .sp_right .inner .h_price .span_01{text-decoration:line-through;color:#616161;}
 .sp_wrap .sp_right .inner em{font-size:12px;color:#616161;}
 .sp_wrap .sp_right .inner em.em_box{margin-top:10px;}
-.sp_wrap .sp_right .inner em.expired{color:red;font-size:12px;}
-.sp_wrap .sp_right .inner em.endtoday{color:#ffa500;font-size:12px;}
+/*.sp_wrap .sp_right .inner em.expired{color:#ff4d4d;font-size:12px;}
+.sp_wrap .sp_right .inner em.endtoday{color:#ffa500;font-size:12px;}*/
 .sp_wrap .sp_right .inner .store_code .container .wrap .box{padding:5px;}
 .sp_wrap .sp_right .inner .store_code .container .wrap .box p{font-size:12px;letter-spacing:3px;}
 .sp_wrap .sp_right .inner .store_code .container .wrap .box [data-copy-text] + i.material-icons{padding:5px;font-size:12px;}
@@ -121,14 +123,14 @@
   .sp_wrap .sp_right{float:none;width:100%;}
   .sp_wrap .sp_right .sp_card{float:left;width:48%;margin:1%;box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);padding: 5px 10px 10px 10px;height:220px;}
   .sp_wrap .sp_right .sp_image{float:none;width:100%;}
-  .sp_wrap .sp_right .sp_image img{height:70%;object-fit:contain;}
+  .sp_wrap .sp_right .sp_image img{height:70%;object-fit:contain;z-index:-1;}
   .sp_wrap .sp_right .inner{float:none;width:100%;margin:0;}
   .sp_wrap .sp_right .inner .sp_title{font-size:12px;}
   .sp_wrap .sp_right .inner em{font-size:10px;}
   /*.sp_wrap .sp_right .inner em.code_em{margin-top:16px;}*/
-  .sp_wrap .sp_right .inner em.expired{font-size:12px;padding:0 3px;}
-  .sp_wrap .sp_right .inner em.endtoday{font-size:12px;padding:0 3px;}
-  .sp_wrap .sp_right .inner span{display:none;}
+  /*.sp_wrap .sp_right .inner em.expired{font-size:12px;padding:0 3px;}
+  .sp_wrap .sp_right .inner em.endtoday{font-size:12px;padding:0 3px;}*/
+  .sp_wrap .sp_right .inner span.index_title{display:none;}
   .sp_wrap .sp_right .inner .promocode_m{display:none;}
   .sp_wrap .sp_right .sp_btn{display:none;}
   .sp_wrap .sp_right .sp_btn_m{display:block;text-align:center;padding:3px 0;background:#000;}
@@ -139,11 +141,12 @@
   .sp_wrap .sp_left .sp_menu ul li a{font-size:12px;}
   .sp_wrap .sp_right .inner .sp_title{font-size:15px;}
   .sp_wrap .sp_right .sp_card{float:none;width:100%;margin:0;height:140px;padding:10px 0;}
-  .sp_wrap .sp_right .inner em.expired{color:red;font-size:15px;background:none;text-align:left;}
-.sp_wrap .sp_right .inner em.endtoday{color:#ffa500;font-size:15px;background:none;text-align:left;}
+  /*.sp_wrap .sp_right .inner em.expired{color:red;font-size:15px;background:none;text-align:left;}
+  .sp_wrap .sp_right .inner em.endtoday{color:#ffa500;font-size:15px;background:none;text-align:left;}*/
   .sp_wrap .sp_right .sp_btn a{padding:10px;font-size:11px;text-align:center;}
   .sp_wrap .sp_left .sp_menu .show-more-height{height:350px;}
   .sp_wrap .sp_left .sp_menu button{font-size:11px;}
+  .sp_wrap .sp_right .sp_image img{z-index:-1;}
 }
 
 /******************************************************************************************************/
