--- a/app/views/storepromotions/index.html.erb
+++ b/app/views/storepromotions/index.html.erb
@@ -46,27 +46,27 @@
             <div class="sp_card clearfix">
               <div class="sp_image">                
                 <%= link_to image_tag(storepromotion.sp_image, alt: storepromotion.sp_title, title: storepromotion.sp_store_name), storepromotion %>
-              </div>
-              <div class="inner">
-                <p><span class="index_title"><%= storepromotion.spcategory.name %></span>
-                  <% if storepromotion.sp_spare_40.present? || storepromotion.sp_spare_42.present?%>
-                  <% else %>
-                  <% if storepromotion.sp_percentage_01.present? %>| Up to <%= number_to_percentage(storepromotion.sp_percentage_01, precision: 0) %> OFF<% end %>
-                  <% end %>
-                  &ensp;
-                  <% if storepromotion.sp_end_date.present? %>
+
+                <% if storepromotion.sp_end_date.present? %>
                     <% if storepromotion.sp_spare_60 && (storepromotion.sp_spare_60 < DateTime.now) %>
                     <% storepromotion.sp_spare_60 %>
                       <em class="expired code_em">EXPIRED</em>
                     <% else %>
                       <% if storepromotion.sp_spare_61 && (storepromotion.sp_spare_61 <= DateTime.now) %>
                       <% storepromotion.sp_spare_61 %>
-                       <em class="endtoday code_em">Expire Today</em>
+                       <em class="endtoday code_em">End Today</em>
                       <% else %>
                        <!-- <em class="code_em">* End Date: <%= storepromotion.sp_end_date %></em> -->
                        <!-- <em class="code_em">* Offers can be expired fast.</em> -->
                       <% end %>
                     <% end %>
+                  <% end %>
+              </div>
+              <div class="inner">
+                <p><span class="index_title"><%= storepromotion.spcategory.name %></span>
+                  <% if storepromotion.sp_spare_40.present? || storepromotion.sp_spare_42.present?%>
+                  <% else %>
+                  <% if storepromotion.sp_percentage_01.present? %> Up to <%= number_to_percentage(storepromotion.sp_percentage_01, precision: 0) %> OFF<% end %>
                   <% end %>
                 </p>
 
