--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -27,7 +27,10 @@
 .show_wrap .show_box .show_inner .hotdeal_inner .h_price .span_01{color:#616161;text-decoration:line-through;font-size:20px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .h_price .span_02{margin-left:10px;font-size:20px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .h_price em{font-size:13px;}
-/*.show_wrap .show_box .show_inner .hotdeal_inner .extra_info{margin:12px 0;}*/
+.show_wrap .show_box .show_inner .hotdeal_inner .add_line{margin:0 0 10px 0;border:1px dashed #ccc;border-left:0;border-right:0;}
+.show_wrap .show_box .show_inner .hotdeal_inner .add_line ul{margin-left:25px;}
+.show_wrap .show_box .show_inner .hotdeal_inner .add_line ul li{font-size:12px;color:#a6a6a6;list-style:disc;}
+
 .show_wrap .show_box .show_inner .hotdeal_inner .extra_info .basic_info{font-weight:500;}
 .show_wrap .show_box .show_inner .hotdeal_inner .extra_info .basic_info .primeornot{display:none;}
 .show_wrap .show_box .show_inner .hotdeal_inner .extra_info em{color:#616161;font-weight:300;font-size:12px;display:block;margin-bottom:5px;}
@@ -93,7 +96,7 @@
 .show_wrap .show_box .show_inner .hotdeal_inner .store_info em{color:#616161;font-size:12.5px;display:block;margin-bottom:7px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .store_info em span{text-transform:uppercase;font-weight:bold;}
 /*.show_wrap .show_box .hotdeal_img{position:relative;}*/
-.trix-container{max-height:250px;overflow:hidden;transition:max-height .5s ease;position:relative;}
+.trix-container{max-height:150px;overflow:hidden;transition:max-height .5s ease;position:relative;}
 .recommend_trix{max-height:200px;margin-top:20px;border-top:1px solid #ccc;border-bottom:1px solid #ccc;}
 .trix-container.show{max-height:2000px;}
 .gradient::before{content:'';height:120px;position:absolute;bottom:0px;left:0;width:100%;background:linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);transition:height .25s ease;}
@@ -140,6 +143,7 @@
   .show_wrap .show_box .show_inner a.p_btn{width:100%;}
   .show_wrap .show_box .show_inner a.store_btn{width:100%;}
   .show_wrap .show_box h2.sd_title{font-size:15px;padding:10px;margin:0;}
+  .show_wrap .show_box .show_inner .hotdeal_inner .h_price{font-size:23px;}
 }
 @media screen and (min-width:641px) and (max-width:1199px){
   .hotdeals_nav{margin-top:10px;}
@@ -173,7 +177,7 @@
 .deals_card .image_box .endtoday{background:#ffa500;width:80px;}
 .deals_card .image_box .endtoday p{margin:0;}
 .deals_card .image_box .expried{-webkit-filter: grayscale(100%);filter: gray;height:100%;}
-.deals_card img{width:100%;height:100%;position:relative;object-fit:contain;}
+.deals_card img{width:70%;height:70%;object-fit:contain;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);object-fit:contain;}
 .deals_card .buy-now{z-index:100;position:absolute;top:0;right:0;padding:0px 15px;color:#fff;font-weight:700;font-size:20px;opacity:0;background-color:#000;-webkit-transform:rotateX(-90deg);transform:rotateX(-90deg);-webkit-transform-origin:100% 0;-ms-transform-origin:100% 0;transform-origin:100% 0;}
 .deals_card .buy-now span{}
 .deals_card .buy-now span a{text-decoration:none;color:#fff;}
@@ -209,6 +213,7 @@
   .more_search{margin:-10px 0 10px 0;}
   .more_search input{width:100%;border:1px solid #ccc;}
   .deals_card{width:48%;}
+  .deals_card img{width:100%;height:100%;}
   .deals_card .buy-now{display:none;}
   .deals_card .image_box{height:200px;padding:20px;}
   .deals_card .image_box .expried_wrap .mark_expried{width:55px;height:30px;}
@@ -234,6 +239,7 @@
   .more_search{margin:-10px 0 10px 0;}
   .more_search input{width:100%;border:1px solid #ccc;}
   .deals_card{width:31.33%;}
+  .deals_card img{width:85%;height:85%;}
   .dealpage_title p{font-size:55px;}
   .deals_card .buy-now{display:block;}
   .deals_card .m_btn{display:block;}
