--- a/app/views/promocodes/_usa_ver2.html.erb
+++ b/app/views/promocodes/_usa_ver2.html.erb
@@ -4,6 +4,9 @@
  <% running_total = 0 %>
  <% running_total =  @promocode.p_spare_26 - (@promocode.p_spare_27 / 100) * @promocode.p_spare_26 %>
  <p class="h_price"><%= number_to_currency(running_total) %> <span class="span_01"><%= number_to_currency(@promocode.p_spare_26) %></span><span class="span_02">( <%= number_to_percentage(@promocode.p_spare_27, precision: 0) %> OFF ) </span></p>
+ <div class="add_line">
+  <ul><li>Take <%= number_to_percentage(@promocode.p_spare_27, precision: 0) %> at <%= number_to_currency(@promocode.p_spare_26) %> via code.</li></ul>
+ </div>
 
  <!--  <div class="box">
     <p></p>
