--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -770,11 +770,6 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 
 
 
-
-
-
-
-
 .slider {
   width: 100%;
   height: 250px;
@@ -788,7 +783,11 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
   display: none;
 }
 
-.slider .img_box{display:block;margin-right:10px;}
+.slider .img_box{display:block;margin-right:10px;width:200px;height:200px;}
+.slider .img_box img{width:100%;height:100%;object-fit:contain;}
+.slider .img_box a{color:#a6a6a6;}
+.slider .img_box a p{font-size:13px;}
+
 .slider .slide {
   display: flex;
   position: absolute;
@@ -818,9 +817,8 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
   text-align: center;
   cursor: pointer;
   outline: none;
-
   position: absolute;
-  top: 50%;
+  top:40%;
   margin-top: -27.5px;
 }
 
