--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -36,9 +36,9 @@
         
         <div class="card_wrap sort-list">
           <!-- <div class="middle_box"><a target="_blank" href="https://amzn.to/2oziOwd"><img src="<%=asset_path 'bargain.png' %>" alt="Deal finder on Amazon" /></a></div> -->
-          <div class="middle_box"><a target="_blank" href="https://amzn.to/2OQpHng"><img src="<%=asset_path '12days.png' %>" alt="Deal finder on Amazon" /></a></div>
+          <!-- <div class="middle_box"><a target="_blank" href="https://amzn.to/2OQpHng"><img src="<%=asset_path '12days.png' %>" alt="Deal finder on Amazon" /></a></div>
           <div class="middle_box_m"><a target="_blank" href="https://amzn.to/2OQpHng"><img src="<%=asset_path '12days_m.png' %>" alt="Deal finder on Amazon" /></a></div>
-          <p class="updating updating_m"><a href="/promocodes">GO TO DISCOVER THE BEST DEALS MORE</a></h2>
+          <p class="updating updating_m"><a href="/promocodes">GO TO DISCOVER THE BEST DEALS MORE</a></h2> -->
             
             
             
