--- a/app/views/hotdeals/_korea.html.erb
+++ b/app/views/hotdeals/_korea.html.erb
@@ -1,120 +1,242 @@
 <div class="hotdeal_inner">
-   <h2 class="title"><%= @hotdeal.h_spare_11 %></h2>
+ <h2 class="title"><%= @hotdeal.h_title %></h2>
 
-   <% if @hotdeal.h_price.present? %>
-    <p class="h_price"><%= number_to_currency(@hotdeal.h_price) %> <span class="span_01"><%= number_to_currency(@hotdeal.h_list_price) %></span><span class="span_02">( <%= number_to_percentage(@hotdeal.h_percentage, precision: 0) %> OFF )</span></p>
-   <% else %>
-    <% if @hotdeal.h_spare_42.present? %>
-      <p class="h_price"><%= number_to_currency(@hotdeal.h_spare_42) %> <span class="span_01"><%= number_to_currency(@hotdeal.h_spare_41) %></span><span class="span_02">( <%= number_to_percentage(@hotdeal.h_percentage, precision: 0) %> OFF )</span></p>
-    <% else %>
-      <% running_total = 0 %>
-      <% running_total =  (@hotdeal.h_spare_43 - @hotdeal.h_spare_44) / @hotdeal.h_spare_43 * 100 %>
-      <p class="h_price"><%= number_to_currency(@hotdeal.h_spare_44) %> <span class="span_01"><%= number_to_currency(@hotdeal.h_spare_43) %></span><span class="span_02">( <%= number_to_percentage(running_total, precision: 0) %> OFF )</span></p>
-    <% end %>
-   <% end %>
-   
-   <!-- <p class="top_line">Amazon is offering "<span><%= @hotdeal.h_title %></span>" for only <em><%= number_to_currency(@hotdeal.h_price) %></em></p> -->
+ <% if @hotdeal.h_price.present? %>
+  <p class="h_price"><%= number_to_currency(@hotdeal.h_price) %> <span class="span_01"><%= number_to_currency(@hotdeal.h_list_price) %></span><span class="span_02">( <%= number_to_percentage(@hotdeal.h_percentage, precision: 0) %> OFF )</span></p>
+ <% else %>
+  <% if @hotdeal.h_spare_42.present? %>
+    <p class="h_price"><%= number_to_currency(@hotdeal.h_spare_42) %> <span class="span_01"><%= number_to_currency(@hotdeal.h_spare_41) %></span><span class="span_02">( <%= number_to_percentage(@hotdeal.h_percentage, precision: 0) %> OFF )</span></p>
+  <% else %>
+    <% running_total = 0 %>
+    <% running_total =  (@hotdeal.h_spare_43 - @hotdeal.h_spare_44) / @hotdeal.h_spare_43 * 100 %>
+    <p class="h_price"><%= number_to_currency(@hotdeal.h_spare_44) %> <span class="span_01"><%= number_to_currency(@hotdeal.h_spare_43) %></span><span class="span_02">( <%= number_to_percentage(running_total, precision: 0) %> OFF )</span></p>
+  <% end %>
+ <% end %>
+ 
+ <!-- <p class="top_line">Amazon is offering "<span><%= @hotdeal.h_title %></span>" for only <em><%= number_to_currency(@hotdeal.h_price) %></em></p> -->
 
-   <div class="extra_info">
-   
-     <!-- <em>+ Free Shipping ( Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items. )</a></em> -->
-     <% if @hotdeal.h_spare_10.present? %>
-      <% @hotdeal.h_spare_10 %>
-      <em>+ Check via Subscribe & Save ( Save 5% Off now and up to 15% Off on auto-deliveries <span><a href="https://amzn.to/2BzWhT4" target="_blank">Learn more</a></span> )</em>
-     <% end %>
-     <% if @hotdeal.h_spare_14.present? %><em>+ 키워드 <a href="<%= @hotdeal.h_spare_15 %>">"<%= @hotdeal.h_spare_14 %>"로 아마존에서 더 보기</a></em><% end %>
-     <em>* 가격과 핫딜은 업데이트 후 변경 될 수 있습니다.</em>
-
-    </div><!--./extra_info-->
-
-    <div class="info_wrap clearfix">
-
+ <div class="info_wrap clearfix">
+    <div class="first_block clearfix">
       <div class="box line_three">
         <p>현지 배송</p>
         <em>Free</em>
       </div>
-
       <div class="box line_three">
         <p>평점</p>
-        <em>Avg. <%= @hotdeal.h_spare_08 %> / 5.0</em>
+        <% if @hotdeal.h_spare_08.present? %>
+          <em>Avg. <%= @hotdeal.h_spare_08 %> / 5.0</em>
+        <% else %>
+          <em>-</em>
+        <% end %>
       </div>
-
       <div class="box line_three">
         <p>리뷰</p>
-        <em><%= number_with_delimiter(@hotdeal.h_spare_09) %>+</em>
+        <% if @hotdeal.h_spare_09.present? %>
+          <em><%= number_with_delimiter(@hotdeal.h_spare_09) %>+</em>
+        <% else %>
+          <em>-</em>
+        <% end %>
       </div>
+    </div>
+    <div class="info_box clearfix">
+      <span>
+        <ul>
+          <li>+ $25 또는 Prime 맴버쉽일 경우 미국 내 무료 배송 <a target="_blank" href="#n">( 아마존 Prime 이란?)<i></i></a></li>
+          <li>Average rating and reviews may change after posted.</li>
+        </ul>
+      </span>
+    </div> 
 
-      <% if @hotdeal.h_spare_45.present? %>
-        <div class="box line_three">
-          <p>Savings</p>
-          <em>
-           <% if @hotdeal.h_spare_41.present? %>
-            <% running_total = 0 %>
-            <% running_total =  @hotdeal.h_spare_41.to_i - @hotdeal.h_spare_42.to_i %>
-            <em class="save_money"><%= number_to_currency(running_total) %></em>
-           <% else %>
-            <% running_total = 0 %>
-            <% running_total =  @hotdeal.h_spare_43.to_i - @hotdeal.h_spare_44.to_i %>
-            <em class="save_money"><%= number_to_currency(running_total) %></em>
-           <% end %>
-          </em>
-        </div>
-        <div class="box line_three">
-          <p>Coupon</p>
-          <% if @hotdeal.h_spare_02.present? %>
-            <em><%= @hotdeal.h_spare_02 %></em>
-          <% else %>
-            <em>-</em>
-          <% end %>
-        </div>
-        <div class="box line_three">
-          <p>Price Drops</p>
-          <em>
-            <% if @hotdeal.h_spare_45.present? %>
-              <% running_total = 0 %>
-              <% running_total =  @hotdeal.h_spare_45.to_i - @hotdeal.h_spare_42.to_i %>
-              <em><%= number_to_currency(running_total) %><!-- (Nov.12.2019 | was: $120.00) --></em>
-            <% else %>
-              <% running_total = 0 %>
-              <% running_total =  @hotdeal.h_spare_45.to_i - @hotdeal.h_spare_44.to_i %>
-              <em><%= number_to_currency(running_total) %><!-- (Nov.12.2019 | was: $120.00) --></em>
-            <% end %>
-          </em>
-        </div>
-      <% else %>
-        <div class="box">
-          <p>Savings</p>
-          <em>
-           <% if @hotdeal.h_spare_41.present? %>
-            <% running_total = 0 %>
-            <% running_total =  @hotdeal.h_spare_41.to_i - @hotdeal.h_spare_42.to_i %>
-            <em class="save_money"><%= number_to_currency(running_total) %></em>
-           <% else %>
-            <% running_total = 0 %>
-            <% running_total =  @hotdeal.h_spare_43.to_i - @hotdeal.h_spare_44.to_i %>
-            <em class="save_money"><%= number_to_currency(running_total) %></em>
-           <% end %>
-          </em>
-        </div>
-        <div class="box">
-          <p>Coupon</p>
-          <% if @hotdeal.h_spare_02.present? %>
-            <em><%= @hotdeal.h_spare_02 %></em>
-          <% else %>
-            <em>-</em>
-          <% end %>
-        </div>
-      <% end %>
-      <div class="info_box">
+  <!-- <div class="box">
+    <p></p>
+    <em></em>
+  </div> -->
+
+  <% if @hotdeal.h_spare_45.present? %>
+    <div class="second_block clearfix">
+      <div class="box line_three">
+        <p>You saved</p>
+        <em>
+         <% if @hotdeal.h_spare_41.present? %>
+          <% running_total = 0 %>
+          <% running_total =  @hotdeal.h_spare_41.to_i - @hotdeal.h_spare_42.to_i %>
+          <em class="save_money"><%= number_to_currency(running_total) %></em>
+         <% else %>
+          <% running_total = 0 %>
+          <% running_total =  @hotdeal.h_spare_43.to_i - @hotdeal.h_spare_44.to_i %>
+          <em class="save_money"><%= number_to_currency(running_total) %></em>
+         <% end %>
+        </em>
+      </div>
+      <div class="box line_three">
+        <p>Coupon</p>
         <% if @hotdeal.h_spare_02.present? %>
-          <span>* 상품페이지에서 쿠폰을 체크하여 추가 할인을 받을 수 있습니다.</span>
-        <% end %>
-        <% if @hotdeal.h_spare_45.present? %>
-          <span>* Price dropped compare to last posted.</span>
+          <em><%= @hotdeal.h_spare_02 %></em>
+        <% else %>
+          <em>-</em>
         <% end %>
       </div>
+      <div class="box line_three">
+        <p>Price Drops</p>
+        <em>
+          <% if @hotdeal.h_spare_45.present? %>
+            <% running_total = 0 %>
+            <% running_total =  @hotdeal.h_spare_45.to_i - @hotdeal.h_spare_42.to_i %>
+            <em><%= number_to_currency(running_total) %><!-- (Nov.12.2019 | was: $120.00) --></em>
+          <% else %>
+            <% running_total = 0 %>
+            <% running_total =  @hotdeal.h_spare_45.to_i - @hotdeal.h_spare_44.to_i %>
+            <em><%= number_to_currency(running_total) %><!-- (Nov.12.2019 | was: $120.00) --></em>
+          <% end %>
+        </em>
+      </div>
+    </div>
+  <% else %>
+    <div class="second_block clearfix">
+      <div class="box">
+        <p>You saved</p>
+        <em>
+         <% if @hotdeal.h_spare_41.present? %>
+          <% running_total = 0 %>
+          <% running_total =  @hotdeal.h_spare_41.to_i - @hotdeal.h_spare_42.to_i %>
+          <em class="save_money"><%= number_to_currency(running_total) %></em>
+         <% else %>
+          <% running_total = 0 %>
+          <% running_total =  @hotdeal.h_spare_43.to_i - @hotdeal.h_spare_44.to_i %>
+          <em class="save_money"><%= number_to_currency(running_total) %></em>
+         <% end %>
+        </em>
+      </div>
+      <div class="box">
+        <p>Coupon</p>
+        <% if @hotdeal.h_spare_02.present? %>
+          <em><%= @hotdeal.h_spare_02 %></em>
+        <% else %>
+          <em>-</em>
+        <% end %>
+      </div>
+    </div>
+  <% end %>
+  <% if @hotdeal.h_spare_02.present? || @hotdeal.h_spare_45.present? %>
+    <div class="info_box">
+      <span>
+        <ul>
+          <% if @hotdeal.h_spare_02.present? %>
+            <li>Check coupon on detail page to receive your extra savings.</li>
+          <% end %>
+          <% if @hotdeal.h_spare_45.present? %>
+            <li>Price dropped compare to last posted.</li>
+          <% end %>
+        </ul>
+      </span>
+    </div>
+  <% end %>
 
 
+  <div class="block clearfix">
+    <div class="box">
+      <p>해외 배송</p>
+      <em>X</em>
+    </div>
+    <div class="box">
+      <p>예상 관세 보증금</p>
+      <em>-</em>
+    </div>
+  </div>
+  <div class="info_box">
+    <span>
+      <ul>
+        <li><a target="_blank" href="#n">관세 보증금(Estimated Import Fees Deposit)이란?<i></i></a></li>
+        <li>직배송이 가능한 상품도 배대지와 배송비 비교를 해보세요.</li>
+      </ul>
+    </span>
+  </div>
+
+  <div class="block clearfix">
+    <div class="box">
+      <p><a target="_blank" href="#n">예상 질량 / 부피 부게 + </a></p>
+      <em>24.75lbs / 54.45lbs</em>
+    </div>
+    <div class="box">
+      <p>예상 배송대행 배송비 + </p>
+      <em>$10</em>
+    </div>
+  </div>
+  <div class="info_box">
+    <span>
+      <ul>
+        <li>질량 무게와 부피부게 중 무거운 쪽을 최종 무게로 측정하여 배송비를 산출 합니다.</li>
+        <!-- <li>부피질량: 가로 X 세로 X 높이 / 166 (인치)</li> -->
+        <li>예상 배송대행 배송비는 가장 많이 이용하는 10개 업체의 무게별 평균 금액입니다.</li>
+      </ul>
+    </span>
+  </div>
+
+  <div class="block clearfix">
+    <div class="box">
+      <p>예상 관세</p>
+      <em>0원</em>
+    </div>
+    <div class="box">
+      <p>예상 부과세</p>
+      <em>0원</em>
+    </div>
+  </div>
+  <div class="info_box">
+    <span>
+      <ul>
+        <li>목록통관 $200이하, 일반통관 $150이하 관부가세 면제</li>
+      </ul>
+    </span>
+  </div>
+
+  <div class="block clearfix">
+    <div class="box total_box">
+      <p>총 예상 구매 가격</p>
+      <em>114,000원</em>
+    </div>
+  </div>
+  <div class="info_box">
+    <span>* 최종가격 = 제품가격 + 미국 내 배송비 + 세금 + 국제 배송비 + 관부가세</span>
+    <span>*</span>
+    <span>* 환율은 관세청 고시환율 적용</span>
+    <span>* </span>
+  </div>
+
+
+
+  <% if @hotdeal.h_spare_14.present? %>
+    <div class="block clearfix">
+      <div class="box">
+        <p>Search more by Keyword</p>
+        <em><a class="keyword" target="_blank" href="<%= @hotdeal.h_spare_15 %>"><%= @hotdeal.h_spare_14 %></a><i></i></em>
+      </div>
+    </div>
+  <% end %>
+
+
+</div><!--./info_wrap-->
+
+
+  <div class="extra_info">
+  </div>
+
+  <div class="code_btn">
+   <a class="m_btn" target="_blank" href="<%= @hotdeal.h_link %>">Check it out on&ensp;<em>Amazon</em></a>
+  </div>
+
+  <%if @hotdeal.h_spare_21.present? %>
+    <div class="trix trix-container gradient"><span>About the product</span><p><%= @hotdeal.h_spare_21.html_safe %></p><button class="show-btn fa fa-chevron-down"></button></div>
+  <% else %>
+    <% if @hotdeal.h_description.present? %>
+      <div class="show_des"><p class="description"><%= @hotdeal.h_description %></p></div>
+    <% end %>
+  <% end %>
+</div><!--./hotdeal_inner-->
+
+
+
+<!-- <div class="block clearfix">
       <div class="box">
         <p>해외 배송</p>
         <em>직배송 가능</em>
@@ -127,7 +249,7 @@
         <span>* 직배송이 가능한 상품도 배대지와 배송비 비교를 해보세요</span>
         <span>* + $25 또는 Prime 맴버쉽일 경우 미국 내 무료 배송 <a target="_blank" href="#n">( 아마존 Prime 이란?)</a></span>
       </div>
-      <!-- <div class="box tax_box">
+      <div class="box tax_box">
         <p>CA(캘리포니아)</p>
         <em>$6</em>
       </div>
@@ -146,7 +268,7 @@
       <div class="info_box">
         <span>* 배송대행업체 물류창고가 위치한 주의 예상 세금입니다.</span>
         <span>* </span>
-      </div> -->
+      </div>
       <div class="box">
         <p><a target="_blank" href="#n">예상 질량 / 부피 부게 + </a></p>
         <em>24.75lbs / 54.45lbs</em>
@@ -170,6 +292,9 @@
       <div class="info_box">
         <span>* 목록통관 $200이하, 일반통관 $150이하 관부가세 면제</span>
       </div>
+    </div>
+
+    <div class="block clearfix">
       <div class="box total_box">
         <p>총 예상 구매 가격</p>
         <em>114,000원</em>
@@ -180,19 +305,4 @@
         <span>* 환율은 관세청 고시환율 적용</span>
         <span>* </span>
       </div>
-    </div>
-
-    <div class="code_btn">
-     <a class="m_btn" target="_blank" href="<%= @hotdeal.h_link %>">Check it out on&ensp;<em>Amazon</em></a>
-    </div>
-
-   <!--  <%if @hotdeal.h_spare_21.present? %>
-      <div class="trix trix-container gradient"><span>Features</span><p><%= @hotdeal.h_spare_21.html_safe %></p><button class="show-btn fa fa-chevron-down"></button></div>
-    <% else %>
-      <% if @hotdeal.h_description.present? %>
-        <div class="show_des"><p class="description"><%= @hotdeal.h_description %></p></div>
-      <% end %>
-    <% end %> -->
-
-
-</div><!--./hotdeal_inner-->
+    </div> -->
