--- a/app/views/shared/_amz_slider.html.erb
+++ b/app/views/shared/_amz_slider.html.erb
@@ -2,91 +2,95 @@
   <div class="slide" id="slide">
 
     <!-- <div class="img_box">
-      <a href="Page_Link">
+      <a target="_blank" href="Page_Link">
         <img class="item" src="Image_URL">
-        <p>About This</p>
-        <em>From $20 ~</em>
+        <p>About_This</p>
       </a>
     </div> -->
     
     <div class="img_box">
-      <a href="#n">
-        <img class="item" src="https://images-na.ssl-images-amazon.com/images/I/71-B89BnKqL._SX425_.jpg">
-        <p>Test Description</p>
-        <em>From $20 ~</em>
+      <a target="_blank" href="https://amzn.to/36yZmA4">
+        <img class="item" src="https://images-na.ssl-images-amazon.com/images/I/715obo1cz0L._AC_SR300,300_.jpg">
+        <p>Save up to $70 on Select Fitbit Items</p>
       </a>
     </div>
     <div class="img_box">
-      <a href="#n">
-        <img class="item" src="https://m.media-amazon.com/images/I/61WhTrlPYAL._SR400,400_.jpg">
-        <p>Test Description</p>
-        <em>From $20 ~</em>
+      <a target="_blank" href="#n">
+        <img class="item" src="https://images-na.ssl-images-amazon.com/images/I/91GMSrYPaHL._AC_SR300,300_.jpg">
+        <p>Save up to 30% off on Samsung 4K UHD Smart TVs</p>
       </a>
     </div>
 
     <div class="img_box">
-      <a href="Page_Link">
-        <img class="item" src="Image_URL">
-        <p>About This</p>
-        <em>From $20 ~</em>
+      <a target="_blank" href="https://amzn.to/2PnWq3B">
+        <img class="item" src="https://images-na.ssl-images-amazon.com/images/I/71RsiDVmbOL._AC_SS300_.jpg">
+        <p>Up to 40% off Under Armour holiday sale at Amazon</p>
       </a>
     </div>
 
     <div class="img_box">
-      <a href="Page_Link">
-        <img class="item" src="Image_URL">
-        <p>About This</p>
-        <em>From $20 ~</em>
+      <a target="_blank" href="https://amzn.to/36HGRth">
+        <img class="item" src="https://images-na.ssl-images-amazon.com/images/I/71dabsS48LL._AC_SR300,300_.jpg">
+        <p>Save Up to 56% off on Sony Audio Products</p>
       </a>
     </div>
 
     <div class="img_box">
-      <a href="Page_Link">
-        <img class="item" src="Image_URL">
-        <p>About This</p>
-        <em>From $20 ~</em>
+      <a target="_blank" href="https://amzn.to/38LurCT">
+        <img class="item" src="https://m.media-amazon.com/images/I/91wRMdBIlHL._AC_UL320_ML3_.jpg">
+        <p>Save Up to 40% off on top LEGO products</p>
       </a>
     </div>
 
     <div class="img_box">
-      <a href="Page_Link">
-        <img class="item" src="Image_URL">
-        <p>About This</p>
-        <em>From $20 ~</em>
+      <a target="_blank" href="https://amzn.to/2Po8X7j">
+        <img class="item" src="https://m.media-amazon.com/images/I/81l5eljhOqL._AC_UL320_ML3_.jpg">
+        <p>save up to 40% on NFL apparel</p>
       </a>
     </div>
 
     <div class="img_box">
-      <a href="Page_Link">
-        <img class="item" src="Image_URL">
-        <p>About This</p>
-        <em>From $20 ~</em>
+      <a target="_blank" href="https://amzn.to/2rSc9im">
+        <img class="item" src="https://images-na.ssl-images-amazon.com/images/I/81RaFrIB2ML._AC_SR300,300_.jpg">
+        <p>Save up to 20% on WoodWick & Nature's Wick Candles</p>
       </a>
     </div>
 
     <div class="img_box">
-      <a href="Page_Link">
-        <img class="item" src="Image_URL">
-        <p>About This</p>
-        <em>From $20 ~</em>
+      <a target="_blank" href="https://amzn.to/2to83zf">
+        <img class="item" src="https://images-na.ssl-images-amazon.com/images/I/71aNTxKH0wL._AC_SR300,300_.jpg">
+        <p>Save up to 30% on Outdoor, Fitness & Sports Gear</p>
       </a>
     </div>
 
     <div class="img_box">
-      <a href="Page_Link">
-        <img class="item" src="Image_URL">
-        <p>About This</p>
-        <em>From $20 ~</em>
+      <a target="_blank" href="https://amzn.to/2LXqOQl">
+        <img class="item" src="https://images-na.ssl-images-amazon.com/images/I/51dqu9Em%2BbL._AC_.jpg">
+        <p>Save up to 40% on Outdoor Statues and Decor</p>
       </a>
     </div>
 
     <div class="img_box">
-      <a href="Page_Link">
-        <img class="item" src="Image_URL">
-        <p>About This</p>
-        <em>From $20 ~</em>
+      <a target="_blank" href="https://amzn.to/2RTbFDq">
+        <img class="item" src="https://images-na.ssl-images-amazon.com/images/I/91xxjCyhWkL._AC_SX425_.jpg">
+        <p>Save up to 20% on LEGO Star Wars</p>
       </a>
     </div>
+
+    <div class="img_box">
+      <a target="_blank" href="https://amzn.to/34khLPT">
+        <img class="item" src="https://images-na.ssl-images-amazon.com/images/I/91uC-QafOnL._AC_SR300,300_.jpg">
+        <p>Save up to 10% on Holiday Sweaters</p>
+      </a>
+    </div>
+
+    <div class="img_box">
+      <a target="_blank" href="https://amzn.to/2YRzixN">
+        <img class="item" src="https://images-na.ssl-images-amazon.com/images/I/91aoAheYV5L._AC_SR300,300_.jpg">
+        <p>Save up to 30% on Levi's Men's and Women's Clothing</p>
+      </a>
+    </div>
+    
     
   </div>
   <button class="ctrl-btn pro-prev">Prev</button>
