--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -22,6 +22,8 @@
         <h2>Take the best deals with promo codes<% if can? :update, @promocodes %><div class="hotdeals_new"><%= link_to 'New Code', new_promocode_path %></div><% end %></h2>
         <%= render 'promocodes_days/note_wadiz' %>
         <%= render 'shared/amz_search' %>
+
+        <%= render 'shared/amz_slider' %>
         
         <!-- <div class="sort_box clearfix">
           <ul>
