--- a/app/views/storepromotions/index.html.erb
+++ b/app/views/storepromotions/index.html.erb
@@ -40,9 +40,10 @@
       </div>
       
       <label class="dropdown">
-        <div class="dd-button">Stores</div>
-        <input type="checkbox" class="dd-input" id="test">
-        <ul class="dd-menu">
+        <div class="store-button">Stores</div>
+        <input type="checkbox" class="store-input" id="test">
+        <ul class="sotre_menu">
+          <li class="search_li"><div class="store_search"><%= form_for "",url: storedeals_path, role: "search", method: :get do %><%= text_field_tag :search, @search_term, placeholder: "Search Store..." %><% end %></div></li>
           <li><a href="/storepromotions/">All Stores</a></li>
           <% Spcategory.all.each do |category| %>
             <li><%= link_to category.name, storepromotions_path(spcategory: category.name) %></li>
